--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.18",
     "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
